# IDEA_GENERATION_CREW-

./: .env  README.md  pyproject.toml
src/project_crew/: main.py  project.py
src/project_crew/crews/config/: agents.yaml  tasks.yaml
src/project_crew/crews/ideas_crew/: __init__.py  idea_crew.py
